# dqcnac

./: LICENSE  README.md  pyproject.toml
.github/workflows/: static.yml
docs/source/: conf.py  readme.rst
docs/source/api/: dqcnac.compiler.gate_grouping.rst  dqcnac.compiler.local_manager.rst  dqcnac.compiler.rst  dqcnac.mapping.local_mapping.rst  dqcnac.network.network.rst  dqcnac.network.rst  dqcnac.network_configuration.rst  dqcnac.nonlocal_gate_scheduling.compilation_state.rst  dqcnac.parser.rst  (+6 more)
dqcnac/: __init__.py
dqcnac/compiler/: __init__.py  compile_manager.py  gate_grouping.py  local_manager.py
dqcnac/local_routing/: __init__.py  basic_router.py
dqcnac/mapping/: __init__.py  circuit_partitioning.py  local_mapping.py
dqcnac/network/: __init__.py  network.py  node.py
dqcnac/network_configuration/: __init__.py  network_builder.py
dqcnac/nonlocal_gate_scheduling/: __init__.py  compilation_state.py  converters.py  nonlocal_gate_schedule.py  nonlocal_operations.py
dqcnac/parser/: __init__.py  dag_to_qoala.py
dqcnac/stats/: __init__.py  stats.py
examples/: example.py
examples/benchmark_circuits/: adder_n28.qasm  adder_n64.qasm  cat_n35.qasm  dnn_n33.qasm  dnn_n51.qasm  ghz_n255.qasm  ghz_n40.qasm  knn_n41.qasm  multiplier_n350.qasm  multiplier_n400.qasm  multiplier_n45.qasm  multiplier_n75.qasm  qft_n160.qasm  qft_n29.qasm  qft_n63.qasm  qugan_n111.qasm  qugan_n39.qasm  qugan_n395.qasm  qugan_n71.qasm  qv_n100.qasm  qv_n32.qasm  square_root_n45.qasm  swap_test_n25.qasm  swap_test_n41.qasm  swap_test_n83.qasm  wstate_n118.qasm  wstate_n76.qasm
(+18 files in other folders)
